--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "@tiptap/react": "^3.6.1",
     "@tiptap/starter-kit": "^3.6.1",
     "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "next": "15.5.4",
     "react": "19.1.0",
